# find-tests

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/: cli.py  find_dotnet_test_projects.py  find_test_projects.py  graph.py
tests/: test_find_dotnet_test_projects.py  test_find_test_projects.py
